fixed bug on iPhone some MenuItem auxiliary text not breaking

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,23 @@
   flex-direction: column;
   gap: 2.4rem;
   min-height: 12.8rem;
-  
   padding: 2.4rem 0;
+  
+  /*
+  background-color: #FFF;
+  z-index: 1;
+  border: 1px solid red;
+  position: fixed;
+  */
+
 }
 
 main {
+  top: 30%;
   display: flex;
   flex-direction: column;
+  
+  /* position: absolute; */
 }
 
 .menu__division {
